Replace jonlauridsens docker image with siteimprove docker image

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
 
   test-alpine:
     runs-on: ubuntu-latest
-    container: jonlauridsen/node-nexe:10-alpine
+    container: siteimprovetbf/node-nexe:10-alpine
     needs:
       - build-nexe-images
     steps:
